Изменены уровни логов: Debug, Info, Warning, Error, Critical
