# docs/swagger.yaml
@@ -164,10 +164,12 @@ definitions:
         type: string
       status:
         enum:
-        - success
-        - warning
-        - error
-        example: success
+        - Debug
+        - Info
+        - Warning
+        - Error
+        - Critical
+        example: Info
         type: string
     required:
     - msg
@@ -308,12 +310,14 @@ definitions:
         example: Операция выполнена успешно
         type: string
       status:
-        description: Статус выполнения операции
+        description: Уровень лога
         enum:
-        - success
-        - warning
-        - error
-        example: success
+        - Debug
+        - Info
+        - Warning
+        - Error
+        - Critical
+        example: Info
         type: string
     required:
     - msg
